# ESP32-C3_Rust_Tutorials

./: .gitignore  .gitmodules  LICENSE  README.md
Data-Logger-PCB/: Hardware.md
Data-Logger-PCB/data_logger_esp32c3/: data_logger_esp32c3.csv  data_logger_esp32c3.kicad_pcb  data_logger_esp32c3.kicad_prl  data_logger_esp32c3.kicad_pro  data_logger_esp32c3.kicad_sch  fp-info-cache  fp-lib-table  report.txt  sym-lib-table
Data-Logger-PCB/data_logger_esp32c3/gerbers/: data_logger_esp32c3-B_Cu.gbr  data_logger_esp32c3-B_Mask.gbr  data_logger_esp32c3-B_Paste.gbr  data_logger_esp32c3-B_Silkscreen.gbr  data_logger_esp32c3-Edge_Cuts.gbr  data_logger_esp32c3-F_Cu.gbr  data_logger_esp32c3-F_Mask.gbr  data_logger_esp32c3-F_Paste.gbr  data_logger_esp32c3-F_Silkscreen.gbr  data_logger_esp32c3-In1_Cu.gbr  data_logger_esp32c3-In2_Cu.gbr  data_logger_esp32c3-NPTH-drl_map.gbr  data_logger_esp32c3-NPTH.drl  data_logger_esp32c3-PTH-drl_map.gbr  data_logger_esp32c3-PTH.drl  data_logger_esp32c3-all-pos.csv  data_logger_esp32c3-job.gbrjob
Data-Logger-PCB/kicad_libraries/: remote_data_logger.bak  remote_data_logger.kicad_sym
Data-Logger-PCB/kicad_libraries/remote_data_logger.pretty/: 472192001.kicad_mod  8-WDFN Exposed Pad.kicad_mod  B0530WS_SE.kicad_mod  DFN1610.kicad_mod  LM321MF.kicad_mod  QFN-28-EP(4x4).kicad_mod  SOT-223-4.kicad_mod  SOT-23.kicad_mod  USB-TYPE-C-018.kicad_mod  WS2812B-2020.kicad_mod
P0-Peripheral-Tutorials/p0-output/src/: main.rs
P0-Peripheral-Tutorials/p1-input/: Cargo.toml
P0-Peripheral-Tutorials/p3-adc/src/: main.rs
P0-Peripheral-Tutorials/p4-dht11/: Cargo.toml
P0-Peripheral-Tutorials/p4-dht11/src/: dht11.rs  main.rs
P0-Project-Tutorials/p8-cli/: Cargo.toml
P0-Project-Tutorials/p8-cli/src/: main.rs
P0-Tutorials/p2-threads/src/: main.rs
P0-Tutorials/p5-i2c/src/: main.rs
Tutorials/p0-output/: Cargo.toml  README.md
Tutorials/p0-output/src/: main.rs
Tutorials/p3-adc/: Cargo.toml
Tutorials/p3-adc/src/: main.rs
Tutorials/p8-cli/: README.md  sdkconfig.defaults
Tutorials/p8-cli/src/: cli.rs
Tutorials/p9-adc-stream/: Cargo.toml
Tutorials/p9-adc-stream/src/: adc_driver.rs  adc_thread.rs  cli.rs  main.rs
WIP/adc-example/: Cargo.toml
WIP/at-commands/: Cargo.toml  README.md
WIP/at-commands/src/: main.rs
WIP/ch02-blinky-thread/: Cargo.toml
WIP/ch02-blinky-thread/src/: main.rs
WIP/ch03-blinky-button/src/: main.rs
WIP/ch03-blinky-fsm/: Cargo.toml  README.md
WIP/ch03-blinky-fsm/src/: main.rs
WIP/ch04-blinky-button-hsm/: Cargo.toml
WIP/ch04-blinky-button-hsm/src/: main.rs
WIP/ch04-blinky-multi-thread/.cargo/: config.toml
WIP/ch06-blinky-adc/src/: main.rs
WIP/ch06-wifi-mqtt/src/: cloud.rs
WIP/ch07-blinky-mqtt/src/: cloud.rs  main.rs  tasks.rs
WIP/ch07-cli/src/: cli.rs  neopixel.rs
WIP/p6-spi/: Cargo.toml
WIP/p6-spi/src/: main.rs
WIP/p7-uart/: README.md
WIP/p7-uart/src/: cli.rs
WIP/wifi/: Cargo.toml
adc-example/src/: main.rs
ch01-blinky/: Cargo.toml  README.md
ch01-blinky/src/: main.rs
ch02-blinky-async/: Cargo.toml
ch02-blinky-async/src/: main.rs
ch02-blinky-improved/: Cargo.toml
ch02-blinky-thread/: Cargo.toml
ch02-blinky-thread/src/: main.rs
ch03-blinky-button/: Cargo.toml  README.md
ch03-blinky-button/src/: main.rs
ch03-blinky-fsm/: Cargo.toml
ch03-blinky-fsm/src/: fsm.rs  led_fsm.rs  main.rs
ch04-blinky-button-hsm/: Cargo.toml
ch04-blinky-button-hsm/src/: led_fsm.rs  main.rs
ch04-blinky-wifi/: Cargo.toml  README.md
ch04-blinky-wifi/src/: main.rs  wifi.rs
ch05-LED-pwm/: Cargo.toml
ch05-LED-pwm/src/: main.rs
ch05-adc_to_ledc/: Cargo.toml
ch05-adc_to_ledc/src/: main.rs
ch05-blinky-button-hsm/: Cargo.toml
ch05-blinky-button-hsm/src/: led_fsm.rs  main.rs
ch05-blinky-button-multi-thread/: Cargo.toml
ch05-blinky-button-multi-thread/src/: main.rs
ch05-blinky-button-pub-sub/: Cargo.toml
ch05-blinky-crossbeams/: Cargo.toml
ch05-blinky-crossbeams/src/: led_fsm.rs  main.rs
ch06-blinky-adc/: Cargo.toml  README.md
ch06-blinky-adc/src/: led_fsm.rs  main.rs  tasks.rs
ch06-blinky-mpmc/: Cargo.toml
ch06-blinky-mpmc/src/: main.rs
ch06-blinky-pub-sub/: Cargo.toml
ch06-blinky-pub-sub/src/: main.rs
ch06-neopixel/: Cargo.toml
ch06-neopixel/src/: main.rs
ch06-sd-card/src/: main.rs
ch06-wifi-mqtt/: Cargo.toml  README.md
ch06-wifi-mqtt/src/: main.rs  tasks.rs  wifi.rs
ch07-blinky-mqtt/: Cargo.toml
ch07-blinky-mqtt/src/: cloud.rs  led_fsm.rs  main.rs  tasks.rs
ch07-cli/: Cargo.toml
ch07-cli/src/: main.rs
ch07-i2c-sx1509/: Cargo.toml
ch07-i2c-sx1509/src/: main.rs
ch07-multi-state-machine/: Cargo.toml
ch07-multi-state-machine/src/: button_fsm.rs  led_fsm.rs  main.rs
ch08-blinky-wifi/src/: main.rs
sd-card/src/: main.rs
tutorials/0-blinky/src/: main.rs
tutorials/0-output/: 0-output.md  Cargo.toml
tutorials/0-output/src/: main.rs
tutorials/1-blinky-button/src/: main.rs
tutorials/1-input/src/: main.rs
tutorials/2-multi-thread/: Cargo.toml
tutorials/2-multi-thread/src/: main.rs
tutorials/2-threads/: Cargo.toml
tutorials/3-adc/src/: main.rs
tutorials/4-neopixel/src/: main.rs
tutorials/5-i2c-gpio/: Cargo.toml
tutorials/5-i2c-gpio/src/: main.rs
tutorials/6-spi/: Cargo.toml
tutorials/6-spi/src/: main.rs
tutorials/p1-input/src/: main.rs
tutorials/p2-threads/src/: main.rs
tutorials/p3-adc/src/: main.rs
tutorials/p4-neopixel/: Cargo.toml
tutorials/p4-neopixel/src/: main.rs  neopixel.rs
tutorials/p5-i2c/src/: main.rs
tutorials/p6-spi/: Cargo.toml  README.md
tutorials/p6-spi/src/: main.rs
tutorials/p7-uart/: Cargo.toml  README.md
tutorials/p7-uart/src/: cli.rs  main.rs
wifi-test/: Cargo.toml
wifi-test/src/: main.rs
