[package]
name = "wifi_mqtt"
version = "0.1.0"
authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"
esp-println = { version = "0.3.1", features = ["esp32c3"] }
esp-idf-svc = "0.45"
embedded-svc = "0.24"
hex = "0.4.3"
serde = {version = "1.0.152", features = ["derive"]}
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
anyhow = "1"

[build-dependencies]
embuild = "0.31"
anyhow = "1"
