[package]
name = "blinky-adc"
version = "0.1.0"
authors = ["Shane"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"
esp-idf-svc = "0.45"
embedded-hal = {version = "1.0.0-alpha.9"}
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-svc = "0.24"
statig = "0.2.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
anyhow = { version = "1", features = ["backtrace"] }


[build-dependencies]
embuild = "0.31"
