[package]
name = "wifi-test"
version = "0.1.0"
authors = ["Shane Mattner <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-svc = "0.43.4"
esp-idf-hal = "0.39.3"
embedded-hal = "0.2.7"
embedded-svc = "0.23.1"
statig = "0.2.0"
mqtt-messages = { path = "/lib/mqtt-messages" }




[build-dependencies]
embuild = "0.30.4"
