[package]
name = "p4-dht11"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.68"
embedded-hal = "0.2.7"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
embuild = "0.30.4"
