[package]
name = "dht11"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-hal = "0.40"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
dht11 = "0.3.1"

[build-dependencies]
embuild = "0.30.4"
