[package]
name = "output"
version = "0.1.0"
authors = ["Shane"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-hal = "0.42.5"
esp-println = { version = "0.3.1", features = ["esp32c3"] }

[build-dependencies]
embuild = "0.30.4"
