[package]
name = "adc-stream"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"
anyhow = "1"
lazy_static = "1.4.0"
shell-words = "1.0.0"

[build-dependencies]
embuild = "0.30.4"
