[package]
name = "adc-example"
version = "0.1.0"
authors = ["Shane Mattner <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.38"
esp-idf-svc="0.42"
embedded-svc = "0.22"
embedded-hal = "0.2"
statig = "0.2.0"
sx1509 = "0.2.0"
log="0.4"


[build-dependencies]
embuild = "0.30.4"
