[package]
name = "spi"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"
esp-println = { version = "0.3.1", features = ["esp32c3"] }
embedded-sdmmc = "0.4.0"

[build-dependencies]
embuild = "0.30.4"
